@@ -1,17 +1,8 @@
-useless use of cat
-
-telefon 1 ... | tee foo bar > baz !!
--> telfifo enable /bla/blupp.fifo, telfifo disable /bla/blupp.fifo
-
-Auch bei abweichendem stdout telefon neustarten
-
 require umschreiben, so dass in einem Pfad gesucht wird: praktisch zum Testen
 neuer Funktionen
 
 Sobald Daniel das Framework fertig hat:
 - Schema für Listeners schreiben
-
-telefon 1 a127.0.0.1 -> "stdio enabled" ? (Harald)
 
 == Nicht so wichtig ==
 
